Corrected spacing in hero section

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,13 @@ p {
     font-family: Arial;
     font-size: 36px;
     width: 300px;
+    margin: 0;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .image-holder {
